cargo-features = ["per-package-target"]

[package]
name = "gm8emulator-wow64"
default-target = "i686-pc-windows-msvc"
version = "0.2.0"
authors = ["The OpenGMK Project Developers"]
edition = "2021"

[dependencies]
bincode = "1.2"
byteorder = "1"
crc32fast = "1.2"
libffi = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
